# MCP-server

./: Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml  test_async.py
src/mcp_obsidian/: APIWrapper.py  main.py  server.py  test_client.py
