[project]
name = "mcp-obsidian"
version = "0.2.1"
description = "MCP server to work with Obsidian via the remote REST plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp",
  "httpx",
  "python-dotenv",
  "pydantic",
]

[[project.authors]]
name = "Siva Sindhuja"
email = "sindhutsundupalli@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-obsidian = "mcp_obsidian.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obsidian"]

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]